--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="" style="height: 100%;">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +14,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body
-    style="background-color: #35383f; box-sizing: border-box; margin: 0 auto"
+    style="background-color: #35383f; box-sizing: border-box; margin: 0 auto; height: 100%"
   >
     <noscript>
       <strong
